<resources>
    <string name="app_name">ShrimpScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="done_button_text">DONE</string>
    <string name="text_add_task"><u>Add New Task</u></string>
    <string name="task_name_hint">Name</string>
    <string name="parent_name_hint">Parent Name</string>
    <string name="pick_time">Start Time</string>
    <string name="pick_date">Start Date</string>
    <string name="description_hint">Description</string>

    <string name="spinner_hint">Pick a Template</string>
    <string name="save_task_string">Save Task</string>
    <string name="empty_not_saved">Didn\'t save</string>
    <string name="delete_button">DELETE ALL TASKS</string>
    <string name="default_start_time_text">Pick Start Time</string>
    <string name="default_start_date_text">Pick Start Date</string>
    <string name="view_today_tasks_button">Today Tasks</string>
    <string name="view_all_tasks_button">All Tasks</string>
    <string name="view_date_tasks_button">Date Tasks</string>
    <string name="view_paged_tasks_button">Paged Tasks</string>
    <string name="view_templates_button">Templates</string>
    <string name="manage_tasks_button">Manage Tasks</string>
    <string name="manage_templates_button">Manage Templates</string>
    <string name="new_group_bottom_button">New group</string>
    <string name="data_hub_button">Data Hub</string>
    <string name="new_template_button">New Template</string>
    <string name="check_mark">\u2713</string>
    <string name="ballot_x">\u2717</string>
    <string name="something_placeholder">Do something in future?</string>
    <string name="edit_string">Edit</string>

    <string name="need_name">Name cannot be empty</string>
    <string name="need_description">Description cannot be empty</string>
    <string name="need_repeat_interval">Repeat interval cannot be empty if set to repeat</string>

    <string name="name_empty">Name empty</string>
    <string name="description_empty">Description empty</string>
    <string name="date_empty">Date empty</string>
    <string name="no_template_selected">No template selected</string>
    <string name="repeat_name">Name already exists in database</string>


    <string name="save_new_group_button">Save</string>
    <string name="add_new_group">Add new item</string>
    <string name="new_group_label">Add new group</string>
    <string name="view_groups_bottom_button">View Groups</string>
    <string name="delete_groups">Delete all groups</string>
    <string name="batch_task_button_string">Batch Save</string>
    <string name="batch_task_bottom_button">Make Batch Task</string>
    <string name="bottom_button_create_task_dialog_string">Create Task Fragment</string>

    <string name="create_task_dialog_batch_checkbox_string">Batch Create for Groups</string>
    <string name="create_task_dialog_title">New Task</string>
    <string name="create_task_dialog_negative_button">Cancel</string>
    <string name="create_task_dialog_positive_button">OK</string>
    <string name="create_task_selected_date">Selected:</string>
    <string name="create_task_last_exist_date">Last Exist Date:</string>

    <string name="task_template_header">Task Template</string>
    <string name="task_template_name_hint">Template Name</string>
    <string name="task_template_description_hint">Default Description</string>
    <string name="task_template_days_repeat_hint">How many days between repeats?</string>
    <string name="task_template_repeat_setting_text">Repeat?</string>
    <string name="task_template_save_button">Save Task Template</string>


    <string name="footer_task">Tasks</string>
    <string name="footer_template">Templates</string>
    <string name="footer_settings">Settings</string>
    <string name="footer_group">Groups</string>
    <string name="footer_data">Data</string>

    <string name="template_header_text"><u>Templates</u></string>
    <string name="group_header_text"><u>Groups</u></string>

    <string name="create_task_group_recycler_date_textview">Select date</string>

    <string name="footer_confirm_button">Save</string>
    <string name="footer_cancel_button">Cancel</string>

    <string name="empty_template_string">None</string>
    <string name="type_name_error">Name cannot be empty.</string>
    <string name="group_error">Some name is invalid or date has not been selected.</string>
    <string name="single_date_error">A start date must be selected.</string>

    <string name="template_make_name_error">Name cannot be empty or already in use.</string>
    <string name="template_make_description_error">Description cannot be empty.</string>
    <string name="template_make_interval_error">If task will repeat, an interval of at least 1 day must be specified.</string>

    <string name="group_make_name_error">Name cannot be empty or already in use.</string>

    <string name="create_task_edit_checkbox">Modify all remaining instances?</string>
    <string name="create_task_edit_reset_checkbox">Reset done/not done?</string>
    <string name="create_task_single_datepicker_edit_date_old">Old Date:</string>
    <string name="create_task_single_datepicker_edit_date_new">New Date: </string>

    <string name="edit_name_description_empty">Cannot save with an empty description.</string>

    <string name="edit_task_label">Edit Task</string>
    <string name="edit_template_label">Edit Template</string>
    <string name="edit_group_label">Edit Group</string>

    <string name="no_group_string">None</string>
    <string name="no_item_string">None</string>

    <string name="reserved_group_error">This name is reserved for system use.</string>
    <string name="reserved_item_error">This name is reserved for system use.</string>
    <string name="between_name_group_string">\u0020-\u0020</string>

    <string name="settings_header"><u>Manage Items</u></string>
    <string name="settings_delete_all_tasks">Delete all tasks.</string>
    <string name="settings_delete_all_templates">Delete all templates.</string>
    <string name="settings_delete_all_groups">Delete all groups.</string>
    <string name="settings_delete_future_task_name">Delete tasks after effective date by name.</string>
    <string name="settings_delete_future_task_template">Delete tasks after effective date by template.</string>
    <string name="settings_delete_future_task_group">Delete tasks after effective date by group.</string>
    <string name="settings_datepicker">EFFECTIVE DATE</string>

    <string name="data_filter_label_string">Group by:</string>
    <string name="data_filter_label_name">name</string>
    <string name="data_filter_label_template">template</string>
    <string name="data_filter_label_group">group</string>

</resources>
