<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding">

    <TextView
        android:id="@+id/new_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/new_group_label"
        android:textSize="@dimen/big_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/create_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_template_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_group_label"
        app:layout_constraintEnd_toStartOf="@id/create_new_group"></com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/create_new_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/check_mark"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_group_name"
        app:layout_constraintBottom_toBottomOf="@+id/create_group_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>