<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding">

    <Spinner
        android:id="@+id/create_task_dialog_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginRight="@dimen/big_padding"
        app:layout_constraintStart_toStartOf="@id/create_task_dialog_spinner"
        app:layout_constraintEnd_toEndOf="@id/create_task_dialog_spinner"
        app:layout_constraintTop_toBottomOf="@id/create_task_dialog_spinner"/>

    <EditText
        android:id="@+id/create_task_dialog_name"
        android:hint="@string/task_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_dialog_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/create_task_dialog_description"
        android:hint="@string/description_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/create_task_dialog_batch_checkbox"
        android:text="@string/create_task_dialog_batch_checkbox_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>